# fmg_grasp_classification

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/: fsr_reader.h
components/bluetooth/: CMakeLists.txt  nimble_ble.c  nimble_ble.h
components/constants/: CMakeLists.txt  config.h  types.h
components/feature_extraction/: CMakeLists.txt  feature_extraction.cpp  feature_extraction.h
components/predictor/: CMakeLists.txt  lda_model.h  predict.cpp  predict.h
liblinear/: linear.cpp
main/: CMakeLists.txt  GPIO_Example.cpp  bluetooth_ble.c  bluetooth_ble.h  predict.h
src/: fsr_reader.cpp
